# advent-of-code-2023

./: .gitignore  LICENSE  README.md  advent-of-code2023.cabal
app/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
inputs/: day-8-example.txt
