cabal-version:      3.0
name:               advent-of-code2023
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Tomas Kallup
maintainer:         t.kallup@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable advent-of-code2023
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Day1
      Day2
      Day3
      Day4
      Day5
      Day6
      Day7
      Day8
    -- other-extensions:
    build-depends:    
      base ^>=4.21.0.0,
      containers ^>=0.7
    hs-source-dirs:   app
    default-language: GHC2024
